# LocalImageSearch

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER_VERIFICATION.md  Dockerfile  README.md  README.zh.md  benchmark_config.example.json  docker-compose.yml  prompts.yaml  prompts_custom_example.yaml  pyproject.toml  pytest.ini  requirements.txt
doc/: benchmark_guide.md  changelog.md  design.md  design.zh.md  extract_paths_usage.md  installation.md  multi_model_support_update.md  performance_optimization.md  recent_updates.md  table-design.md  usage.md  web-ui-design.md
doc/architecture/: faiss-design.md  search-design.md
scripts/: docker-verify.sh  init_database.py  init_db.sh  setup_ollama.sh  test-full-workflow.sh  translate_comments.py
src/: __init__.py  benchmark_models.py  cli_config.py  db_manager.py  extract_image_paths.py  image_processor.py  index_builder.py  main.py  model_factory.py  prompt_manager.py  show_table_structure.py  tagging.py  utils.py
src/api/: __init__.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  db.py
src/i18n/: __init__.py  en.json  zh.json
src/models/: __init__.py  image_tags.py
src/services/: __init__.py
src/utils/: __init__.py
tests/: README.md  README_DOUBAO.md  docker-test.sh  run_doubao_test.sh  test_doubao.py  test_system.py
tests/docs/: DOCKER_DEPLOYMENT.md  testing.md
tests/prompt/: README.md  generate_test_images.py  test_tag_generation.py
tests/unit/: test_database.py  test_vectorizer.py
ui/: .gitignore  README.md  package-lock.json  package.json
(+10 files in other folders)
